2006-01-11  Juho Vähä-Herttua
   * Clean up the UTF-8 code a little bit

Version 0.95
------------

2006-01-01  Juho Vähä-Herttua
   * Fix bug when same nick whois requested multiple times
   * Fix potential crash in /part command and /kick command
   * Close window after /part message (earlier left open)
   * Fix index out of bounds in UIHandler
   * Fix crash in UIHandler if parted or kicked in Status win
   * Add new UTF-8 options to advanced settings

2005-12-31  Juho Vähä-Herttua
   * Add support for native UTF-8 encoding/decoding
   * Add support for UTF-8 decode with fallback

2005-12-04  Juho Vähä-Herttua
   * Fix incoming CTCP messages broken in 0.94
   * Add support for inputting multiple lines at one time
   * More verbose whois from names list requested
   * Small fix for part command if not in a channel window
   * Add support for /kick command with a kick message also

Version 0.94
------------

2005-10-19  Juho Vähä-Herttua
   * Change channel separator to be ",", makes chankey possible
   * Add support for multiple highlight strings

2005-06-21  Juho Vähä-Herttua
   * Longer join input because requested (and it was too small)

2005-03-31  Juho Vähä-Herttua
   * keyRepeated events now forwarded correctly in Window.java

2005-03-29  Juho Vähä-Herttua
   * TextArea.addText() really needs to be synchronized,
     although I already got rid of synched methods

2005-03-21  Juho Vähä-Herttua
   * Added support for /ctcp command and /whois equals now /wii
   * Button 0 is a shortcut to favourites
   * RPL_TOPICWHOTIME works and came with a pretty date parser

2005-03-08  Juho Vähä-Herttua
   * Changed the pong reply to be more similar with ping request
   * Fixed the modeline parser that breaks with some servers

Version 0.93
------------

2005-03-03  Juho Vähä-Herttua
   * readLine crashed with 0xFF interpreting it as EOF, thanks
     to Ilya Novoselov for a hint

2005-03-03  Juho Vähä-Herttua
   * Russian native encodings should now be 100% working
