@@ -6,4 +6,3 @@ autorun in favourites
 fix problems in /commands (/raw nick change)
 finish the parser (who replies)
 show channel modes somewhere in the user interface
-show invites somewhere
