@@ -1,3 +1,8 @@
+2006-01-17  Juho Vähä-Herttua
+   * Fix invites in both ways
+   * Fix problems if own nick is changed
+   * Show error message when connection is closed
+
 2006-01-11  Juho Vähä-Herttua
    * Clean up the UTF-8 code a little bit
 
